compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_delegate.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 656
expression: const delegate = 1
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const delegate = 1
  │       ^^^^^^^^ I was expecting a name here


